--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:vercel": "tsc --noEmit && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -16,10 +20,7 @@
     "@tanstack/react-query": "^4.29.5",
     "antd": "^5.4.0",
     "axios": "^1.11.0",
-    "cors": "^2.8.5",
     "dayjs": "^1.11.7",
-    "dotenv": "^17.2.1",
-    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-calendar": "^4.2.1",
     "react-dom": "^18.2.0",
