--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,8 @@
       "src": "package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run build:vercel"
       }
     }
   ],
@@ -18,8 +19,5 @@
       "src": "/(.*)",
       "dest": "/index.html"
     }
-  ],
-  "env": {
-    "VITE_API_URL": "https://your-backend-url.railway.app"
-  }
+  ]
 } 
