--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
-    "build:vercel": "npx vite build",
+    "build": "node ./node_modules/vite/bin/vite.js build",
+    "build:vercel": "node ./node_modules/vite/bin/vite.js build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
