repair vercel blank page

--- a/config.railway.json
+++ b/config.railway.json
@@ -2,7 +2,7 @@
   "kintone": {
     "domain": "yqconstruction.cybozu.com",
     "username": "Administrator",
-    "password": "Yqconstruction@2024",
+    "password": "HskX3z5yxKnA",
     "apps": {
       "studentAuth": "222",
       "teacherAuth": "224",
